# get-money-get-paid

./: .gitignore  CLAUDE.md  README.md  SPEC.md  schema.sql
.claude/: ralph-loop.local.md
.github/workflows/: test.yml
dashboard-api/: package-lock.json  package.json  pyproject.toml  wrangler.toml
dashboard-api/migrations/: 0002_add_algorithm_cash.sql
dashboard-api/src/: entry.py  static_assets.py
dashboard-api/src/dashboard_api/: __init__.py  metrics.py
dashboard-api/tests/: conftest.py  test_metrics.py
docs/plans/: 2026-01-30-realtime-trading-design.md
frontend/: index.html  package-lock.json  package.json
frontend/css/: styles.css
frontend/js/: api.js  app.js  charts.js  utils.js
frontend/tests/: utils.test.js
realtime/: README.md  pyproject.toml
realtime/config/: settings.yaml  strategies.yaml
realtime/dagster_definitions/: __init__.py  definitions.py
realtime/scripts/: setup.sh  trading-engine-configured.service  trading-engine.service
realtime/src/: __init__.py  d1_sync.py  engine.py  indicators.py  main.py  orders.py  websocket.py
realtime/src/strategies/: __init__.py  base.py  buy_and_hold.py  mean_reversion.py  momentum.py  rsi.py  sma_crossover.py
trading-engine/: pyproject.toml  wrangler.toml
trading-engine/src/: entry.py
trading-engine/src/trading_engine/: __init__.py  strategies.py
trading-engine/tests/: conftest.py  test_strategies.py
